Manifest_files/Statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mystate
spec:
  serviceName: mysqldb 
  replicas: 1

  selector:
    matchLabels:
      app: blooddb

  template:
    metadata:
      labels:
        app: blooddb

    spec:
      containers:
      - name: blooddbcont
        image: prasadperla46/mybloodbank:dbimage

        ports:
        - containerPort: 3306

        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"
          limits:
            cpu: "150m"
            memory: "250Mi"

        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /usr/share/nginx/html/

  volumeClaimTemplates:
  - metadata:
      name: mysql-persistent-storage
    spec:
      accessModes:
      - ReadWriteOnce

      resources:
        requests:
          storage: 2Gi
