Manifest_files/appService.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bloodservice
spec:
  type: ClusterIP
  selector:
    app: blood
  ports:
    - targetPort: 80
      port: 80
