Manifest_files/Ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bloodbankingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bloodservice
                port:
                  number: 80
